@@ -1,5 +1,5 @@
 /*
- * "$Id: auth.c,v 1.41.2.25 2004/05/27 15:37:47 mike Exp $"
+ * "$Id: auth.c,v 1.41.2.26 2004/06/29 03:28:08 mike Exp $"
  *
  *   Authorization routines for the Common UNIX Printing System (CUPS).
  *
@@ -15,9 +15,9 @@
  *       Attn: CUPS Licensing Information
  *       Easy Software Products
  *       44141 Airport View Drive, Suite 204
- *       Hollywood, Maryland 20636-3111 USA
+ *       Hollywood, Maryland 20636-3142 USA
  *
- *       Voice: (301) 373-9603
+ *       Voice: (301) 373-9600
  *       EMail: cups-info@cups.org
  *         WWW: http://www.cups.org
  *
@@ -1780,5 +1780,5 @@ to64(char          *s,	/* O - Output string */
 
 
 /*
- * End of "$Id: auth.c,v 1.41.2.25 2004/05/27 15:37:47 mike Exp $".
+ * End of "$Id: auth.c,v 1.41.2.26 2004/06/29 03:28:08 mike Exp $".
  */
