@@ -1,5 +1,5 @@
 /*
- * "$Id: banners.c,v 1.5.2.6 2003/07/06 20:02:43 mike Exp $"
+ * "$Id: banners.c,v 1.5.2.7 2004/06/29 03:28:08 mike Exp $"
  *
  *   Banner routines for the Common UNIX Printing System (CUPS).
  *
@@ -15,9 +15,9 @@
  *       Attn: CUPS Licensing Information
  *       Easy Software Products
  *       44141 Airport View Drive, Suite 204
- *       Hollywood, Maryland 20636-3111 USA
+ *       Hollywood, Maryland 20636-3142 USA
  *
- *       Voice: (301) 373-9603
+ *       Voice: (301) 373-9600
  *       EMail: cups-info@cups.org
  *         WWW: http://www.cups.org
  *
@@ -211,5 +211,5 @@ compare(const banner_t *b0,	/* I - First banner */
 
 
 /*
- * End of "$Id: banners.c,v 1.5.2.6 2003/07/06 20:02:43 mike Exp $".
+ * End of "$Id: banners.c,v 1.5.2.7 2004/06/29 03:28:08 mike Exp $".
  */
