@@ -1,5 +1,5 @@
 /*
- * "$Id: filter.c,v 1.3.2.7 2003/01/07 18:27:20 mike Exp $"
+ * "$Id: filter.c,v 1.3.2.8 2004/06/29 03:28:08 mike Exp $"
  *
  *   File type conversion routines for the Common UNIX Printing System (CUPS).
  *
@@ -15,9 +15,9 @@
  *       Attn: CUPS Licensing Information
  *       Easy Software Products
  *       44141 Airport View Drive, Suite 204
- *       Hollywood, Maryland 20636-3111 USA
+ *       Hollywood, Maryland 20636-3142 USA
  *
- *       Voice: (301) 373-9603
+ *       Voice: (301) 373-9600
  *       EMail: cups-info@cups.org
  *         WWW: http://www.cups.org
  *
@@ -322,5 +322,5 @@ lookup(mime_t      *mime,	/* I - MIME database */
 
 
 /*
- * End of "$Id: filter.c,v 1.3.2.7 2003/01/07 18:27:20 mike Exp $".
+ * End of "$Id: filter.c,v 1.3.2.8 2004/06/29 03:28:08 mike Exp $".
  */
