@@ -1,5 +1,5 @@
 /*
- * "$Id: mime.c,v 1.7.2.11 2004/02/25 20:01:37 mike Exp $"
+ * "$Id: mime.c,v 1.7.2.12 2004/06/29 03:28:08 mike Exp $"
  *
  *   MIME database file routines for the Common UNIX Printing System (CUPS).
  *
@@ -15,9 +15,9 @@
  *       Attn: CUPS Licensing Information
  *       Easy Software Products
  *       44141 Airport View Drive, Suite 204
- *       Hollywood, Maryland 20636-3111 USA
+ *       Hollywood, Maryland 20636-3142 USA
  *
- *       Voice: (301) 373-9603
+ *       Voice: (301) 373-9600
  *       EMail: cups-info@cups.org
  *         WWW: http://www.cups.org
  *
@@ -583,5 +583,5 @@ delete_rules(mime_magic_t *rules)	/* I - Rules to free */
 
 
 /*
- * End of "$Id: mime.c,v 1.7.2.11 2004/02/25 20:01:37 mike Exp $".
+ * End of "$Id: mime.c,v 1.7.2.12 2004/06/29 03:28:08 mike Exp $".
  */
